Name: dnsloops
Version: 2.0
Description: DNS lookup with feedback of newly found results
License: AllRightsReserved
Author: Ben Clifford <benc@cqx.ltd.uk>
Build-Type: Simple
Cabal-Version: >=1.6

Executable dnsloops-test
  Build-depends: base, free-operational, mtl, transformers, stm
  main-is: Test.hs
  ghc-options: -main-is Test

Executable dnsloops
  Build-depends: base, dns >=1.4, free-operational, mtl, bytestring, iproute, transformers, stm
  main-is: Main.hs
  ghc-options: -main-is Main -threaded

Test-suite test-dnsloops
  Type: exitcode-stdio-1.0
  main-is: test-dnsloops.hs
  build-depends: base

